--- a/requirements.txt
+++ b/requirements.txt
@@ -2,27 +2,27 @@
 category-encoders==2.2.2
 click==7.1.2
 fastapi==0.63.0
-h11==0.12.0; python_version >= '3.6'
+h11==0.12.0
 httptools==0.1.1
-joblib==1.0.1; python_version >= '3.6'
-numpy==1.20.1; python_version >= '3.7'
+joblib==1.0.1
+numpy==1.20.1
 pandas==1.2.2
 patsy==0.5.1
 plotly==4.14.3
-pydantic==1.7.3; python_version >= '3.6'
-python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pydantic==1.7.3
+python-dateutil==2.8.1
 python-dotenv==0.15.0
 pytz==2021.1
 pyyaml==5.4.1
 retrying==1.3.3
-scikit-learn==0.24.1; python_version >= '3.6'
-scipy==1.6.0; python_version >= '3.7'
-six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+scikit-learn==0.24.1
+scipy==1.6.0
+six==1.15.0
 sklearn==0.0
 sqlalchemy==1.3.23
-starlette==0.13.6; python_version >= '3.6'
-statsmodels==0.12.2; python_version >= '3.6'
-threadpoolctl==2.1.0; python_version >= '3.5'
+starlette==0.13.6
+statsmodels==0.12.2
+threadpoolctl==2.1.0
 uvicorn[standard]==0.13.3
 uvloop==0.15.0
 watchgod==0.6
